--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,7 @@
+require: rubocop-rspec
+
 Metrics/LineLength:
-  Max: 120
+  Max: 100
 
 Metrics/MethodLength:
   Max: 20
@@ -8,11 +10,4 @@ Metrics/ClassLength:
   Max: 100
 
 Style/Documentation:
-  Description: 'Document classes and non-namespace modules.'
-  Enabled: false
-
-Style/FrozenStringLiteralComment:
-  Description: >-
-                 Add the frozen_string_literal comment to the top of files
-                 to help transition from Ruby 2.3.0 to Ruby 3.0.
   Enabled: false
